--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png"> -->
+<!--     <link rel="icon" type="image/png" sizes="32x32" href="https://www.colorcombos.com/colors/660033"> -->
+    <title>Nathan's Portfolio</title>
+
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
